--- a/core/overlay/_theme.scss
+++ b/core/overlay/_theme.scss
@@ -37,14 +37,15 @@ $mdw-overlay__theme-values: (
 @mixin mdw-overlay__theme-rules($type: 'var') {
   .mdw-overlay {
     &,
-    &:active,
+    &[aria-pressed="false"]:active,
     &[aria-selected="true"],
     &[aria-pressed="true"],
     &[aria-current] {
       &::before {
-        color: inherit;
         @if ($type == 'var') {
           color: RGB(var(--ink-color));
+        } @else {
+          // Handled by mdw-color
         }
       }
     }
@@ -52,23 +53,23 @@ $mdw-overlay__theme-values: (
     &[aria-selected="false"],
     &[aria-pressed="false"],
     &[disabled],
-    &[aria-disabled="true"],
     &[disabled]:active,
+    &[aria-disabled="true"],
     &[aria-disabled="true"]:active {
       &::before {
-        color: mdwOverlayThemeValue("overlay-color", $type);
+        @if ($type == 'var') {
+          color: mdwOverlayThemeValue("overlay-color", $type);
+        } @else {
+          background-color: mdwOverlayThemeValue("overlay-color", $type);
+        }
       }
     }
 
-    @if ($type == 'var') {
-      .mdw-overlay__group[aria-multiselectable="true"] &[aria-selected="true"] {
-        color: mdwOverlayThemeValue("off-color", $type);
-      }
-    }
-
+    // Off color
     &[aria-selected="false"],
-    &[aria-pressed="false"] {
-      @if ($type == 'var') {
+    &[aria-pressed="false"],
+    &[aria-selected="true"]:not([aria-current]):not([mdw-overlay-active~="selected"]) {
+      #{if($type == 'var', '&', '&,&.mdw-theme')} {
         color: mdwOverlayThemeValue("off-color", $type);
         &[mdw-border-ink] {
           border-color: mdwOverlayThemeValue("off-divider-color", $type);
@@ -82,36 +83,15 @@ $mdw-overlay__theme-values: (
         &[mdw-overlay-default="divider"] {
           color: mdwOverlayThemeValue("off-divider-color", $type);
         }
-      } @else {
-        &,&.mdw-theme {
-          color: mdwOverlayThemeValue("off-color", $type);
-          &[mdw-border-ink] {
-            border-color: mdwOverlayThemeValue("off-divider-color", $type);
-          }
-          &[mdw-overlay-default="medium"] {
-            color: mdwOverlayThemeValue("off-medium-color", $type);
-          }
-          &[mdw-overlay-default="inactive"] {
-            color: mdwOverlayThemeValue("off-inactive-color", $type);
-          }
-          &[mdw-overlay-default="divider"] {
-            color: mdwOverlayThemeValue("off-divider-color", $type);
-          }
-        }
-      }  
-      
-    }
-
-    &[mdw-overlay-disabled="ink"] {
-      &[disabled],
-      &[aria-disabled="true"] {
-        color: mdwOverlayThemeValue("off-inactive-color", $type);
       }
     }
 
-    &:not([mdw-overlay-disabled]) {
-      &[disabled],
-      &[aria-disabled="true"] {
+    &[disabled],
+    &[aria-disabled="true"] {
+      &[mdw-overlay-disabled="ink"] {
+        color: mdwOverlayThemeValue("off-inactive-color", $type);
+      }
+      &:not([mdw-overlay-disabled]) {
         opacity: mdwOverlayThemeValue("disabled-opacity", $type);
       }
     }
@@ -156,7 +136,7 @@ $mdw-overlay__theme-values: (
     }
 
     // Activated
-    .mdw-overlay__group[aria-multiselectable="false"] &[aria-selected="true"]:not([mdw-overlay-off~="selected"]),
+    &[aria-selected="true"][mdw-overlay-activated~="selected"]:not([mdw-overlay-off~="selected"]),
     &[aria-current]:not([mdw-overlay-off~="current"]),
     &[aria-pressed="true"]:not([mdw-overlay-off~="activated"]) {
       &::before {
